<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLentaAds"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="32dp"
    tools:context=".Ads.LentaAds">

    <TextView
        android:id="@+id/return_lent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/manrope_semi_bold"
        android:text="@string/return_lents"
        android:textColor="@color/main_popular"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/arrayPriceRVEditAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDirectionAddAds"
        tools:layout_height="30dp" />

    <TextView
        android:id="@+id/nameAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/manrope_semi_bold"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageSlider"
        tools:text="Полароид PolaroidGo" />

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_lent"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="4dp"
        app:sliderIndicatorRadius="1.5dp"
        app:sliderIndicatorSelectedColor="#FFFFFF"
        app:sliderIndicatorUnselectedColor="#636363" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrayPriceRVEditAds" />

    <TextView
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="Имя"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/userPhoto"
        app:layout_constraintTop_toTopOf="@+id/userPhoto" />


    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/icon_point"
        android:drawablePadding="10dp"
        android:hint="Адрес"
        android:textColor="@color/main_popular"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/textViewDirectionAddAds"
        app:layout_constraintTop_toBottomOf="@+id/nameAds"
        tools:text="Коркмасова 1, 0.7 км" />

    <TextView
        android:id="@+id/writeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_select_img"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="Написать"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/main_popular"
        android:text="@string/rent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeMessage"
        app:layout_constraintVertical_bias="1" />


    <ImageView
        android:id="@+id/favoriteBtnAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameUser" />

    <ImageView
        android:id="@+id/editBtnAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/edit_pencil"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteBtnAds"
        app:layout_constraintEnd_toStartOf="@+id/favoriteBtnAds"
        app:layout_constraintTop_toTopOf="@+id/favoriteBtnAds" />


    <TextView
        android:id="@+id/textViewDirectionAddAds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Описание"
        android:paddingVertical="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
        tools:text="@string/tools_direction_lent" />

    <FrameLayout
        android:id="@+id/frameLayoutLentaAds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>